--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+   "engines": {
+    "npm": "6.x"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
