--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-web-tabs": "^1.0.1",
     "reactstrap": "^8.5.1"
   },
   "scripts": {
