--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.14.1",
     "notistack": "^0.9.17",
     "npm-install": "^1.4.3",
+    "qrcode-react": "^0.1.16",
     "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-carousel": "^4.1.1",
